--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "telebot": "^1.4.1"
   },
   "devDependencies": {
-    "dotenv": "^14.2.0"
+    "dotenv": "^14.2.0",
+    "eslint": "^8.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
   },
   "repository": {
     "type": "git",
