--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "discord.js": "^13.4.0",
     "fast-xml-parser": "^4.0.0-beta.8",
     "mongoose": "^6.1.4",
-    "telebot": "^1.4.1"
+    "telegraf": "^4.6.0"
   },
   "devDependencies": {
     "dotenv": "^14.2.0",
