Change linter rules, Add command to telegram client

--- a/variable-file-example.env
+++ b/variable-file-example.env
@@ -3,4 +3,4 @@ DISCORD_ID=some-app-id
 TELEGRAM_TOKEN=some-telegram-token
 TELEGRAM_ID=some-telegram-id
 EARTHQUAKE_API_KEY=some-api-key
-DB_URL=mongodb://my-mongo-database/my-data-path:27017
+DB_URL=mongodb://my-mongo-database:27017/my-data-path
