--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "dotenv": "^14.2.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.4"
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "2.5.1"
   },
   "repository": {
     "type": "git",
